syntax = "proto3";

package account;

service Account{
    rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse){}
    rpc GetUser(GetUserRequest) returns(GetUserResponse){}
    rpc DeleteUser(DeleteUserRequest) returns(DeleteUserResponse){}
}

message CreateUserRequest {
    string name = 1;
    string address = 2;
    int32 age = 3;
}

message CreateUserResponse {
    int64 id = 1;
    string name = 2;
    string address = 3;
    int32 age = 4;
}

message UpdateUserRequest {
    int64 id = 1;
    string name = 2;
    string address = 3;
    int32 age = 4;
}

message UpdateUserResponse {
    int64 id = 1;
    bool updated = 2;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    int64 id = 1;
    string name = 2;
    string address = 3;
    int32 age = 4;
}

message DeleteUserRequest{
    int64 id = 1;
}

message DeleteUserResponse{
    bool deleted = 1;
}